--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <section class="brochure">
     <h2>Our Brochure</h2>
     <p>Click below to download our company brochure.</p>
-    <a href="SmartNestConsulting_Doublepage.pdf" target="_blank">Download Brochure</a>
+    <a href="https://Snovy24/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Download Brochure</a>
 </section>
 
 <section class="contact">
@@ -101,5 +101,6 @@
 
 </body>
 </html>
+
 
 
