--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartNest Consulting</title>
+    <meta name="description" content="SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
+    <meta name="keywords" content="SmartNest Consulting, business consulting, growth strategy, Ireland consultants, startup support">
+    <link rel="canonical" href="https://snovy24.github.io/SmartNestConsulting1.github.io/">
+
+    <meta property="og:title" content="SmartNest Consulting">
+    <meta property="og:description" content="Transforming Businesses. Accelerating Growth.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://snovy24.github.io/SmartNestConsulting1.github.io/">
+    <meta property="og:image" content="https://snovy24.github.io/SmartNestConsulting1.github.io/logo.jpg"> <!-- Replace with your actual logo image link -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,6 +68,28 @@
             padding: 20px;
             margin-top: 20px;
         }
+        header h1 {
+            font-size: clamp(1.8rem, 4vw, 2.5rem);
+        }
+
+        section h2 {
+            color: #004aad;
+        }
+
+        a {
+            color: #004aad;
+        }
+
+        button:hover, .brochure a:hover {
+            background: #003580;
+        }
+
+        @media (max-width: 600px) {
+            section {
+        padding: 20px 10px;
+        }
+        }
+
     </style>
 </head>
 <body>
@@ -101,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
