--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h2>Inquire Us:</h2>
     <form action="https://formspree.io/f/xyzpvwgk" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="_replyto" placeholder="Your Email" required>
+        <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
         <button type="submit">Send Message</button>
     </form>
@@ -134,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
