--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="ome40jWLx0sO9cT-gLryp0HuD5CnJjooEGgINGfwbcY" />
     <title>SmartNest Consulting</title>
     <meta name="description" content="SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
     <meta name="keywords" content="SmartNest Consulting, business consulting, growth strategy, Ireland consultants, startup support">
@@ -134,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
