--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="ome40jWLx0sO9cT-gLryp0HuD5CnJjooEGgINGfwbcY" />
     <title>SmartNest Consulting</title>
-    <meta name="description" content="SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
+    <meta name="description" content=" SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
     <meta name="keywords" content="SmartNest Consulting, business consulting, growth strategy, Ireland consultants, startup support">
     <link rel="canonical" href="https://snovy24.github.io/SmartNestConsulting1.github.io/">
 
@@ -108,7 +108,7 @@
 <section class="brochure">
     <h2>Our Brochure</h2>
     <p>Click below to download our company brochure.</p>
-    <a href="https://Snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Download Brochure</a>
+    <a href="https://Snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Brochure</a>
 </section>
 
 <section class="contact">
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
