--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta property="og:description" content="Transforming Businesses. Accelerating Growth.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://snovy24.github.io/SmartNestConsulting1.github.io/">
-    <meta property="og:image" content="https://snovy24.github.io/SmartNestConsulting1.github.io/logo.jpg"> <!-- Replace with your actual logo image link -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta property="og:image" content="https://snovy24.github.io/SmartNestConsulting1.github.io/logo.jpg"> --> <!-- Replace with your actual logo image link -->
+    
 
     <style>
         body {
@@ -108,7 +108,7 @@
 <section class="brochure">
     <h2>Our Brochure</h2>
     <p>Click below to download our company brochure.</p>
-    <a href="https://Snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Brochure</a>
+    <a href="https://snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Brochure</a>
 </section>
 
 <section class="contact">
@@ -122,7 +122,8 @@
     <h2>Inquire Us:</h2>
     <form action="https://formspree.io/f/xyzpvwgk" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
+        <input type="email" name="_replyto" placeholder="Your Email" required>
+    <!--    <input type="email" name="email" placeholder="Your Email" required> -->
         <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
         <button type="submit">Send Message</button>
     </form>
@@ -135,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
