--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="ome40jWLx0sO9cT-gLryp0HuD5CnJjooEGgINGfwbcY" />
     <title>SmartNest Consulting</title>
-    <meta name="description" content=" SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
+    <meta name="description" content="SmartNest Consulting helps businesses and entrepreneurs with strategies, growth acceleration, and operational improvement.">
     <meta name="keywords" content="SmartNest Consulting, business consulting, growth strategy, Ireland consultants, startup support">
     <link rel="canonical" href="https://snovy24.github.io/SmartNestConsulting1.github.io/">
 
@@ -13,8 +13,7 @@
     <meta property="og:description" content="Transforming Businesses. Accelerating Growth.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://snovy24.github.io/SmartNestConsulting1.github.io/">
-<!-- <meta property="og:image" content="https://snovy24.github.io/SmartNestConsulting1.github.io/logo.jpg"> --> <!-- Replace with your actual logo image link -->
-    
+    <!-- <meta property="og:image" content="https://snovy24.github.io/SmartNestConsulting1.github.io/logo.jpg"> -->
 
     <style>
         body {
@@ -32,12 +31,15 @@
         }
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: clamp(1.8rem, 4vw, 2.5rem);
         }
         section {
             padding: 40px 20px;
             max-width: 900px;
             margin: auto;
+        }
+        section h2 {
+            color: #004aad;
         }
         .brochure a {
             background: #004aad;
@@ -45,22 +47,30 @@
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
+            transition: background 0.3s ease;
         }
-        .contact form {
+        .brochure a:hover {
+            background: #003580;
+        }
+        .contact form, .inquiry form {
             display: flex;
             flex-direction: column;
         }
-        .contact input, .contact textarea {
+        .contact input, .contact textarea, .inquiry input, .inquiry textarea {
             margin: 10px 0;
             padding: 10px;
             border: 1px solid #ccc;
         }
-        .contact button {
+        .contact button, .inquiry button {
             background: #004aad;
             color: white;
             padding: 10px;
             border: none;
             cursor: pointer;
+            transition: background 0.3s ease;
+        }
+        .contact button:hover, .inquiry button:hover {
+            background: #003580;
         }
         footer {
             text-align: center;
@@ -69,35 +79,21 @@
             padding: 20px;
             margin-top: 20px;
         }
-        header h1 {
-            font-size: clamp(1.8rem, 4vw, 2.5rem);
-        }
-
-        section h2 {
-            color: #004aad;
-        }
-
         a {
             color: #004aad;
         }
-
-        button:hover, .brochure a:hover {
-            background: #003580;
-        }
-
         @media (max-width: 600px) {
             section {
-        padding: 20px 10px;
+                padding: 20px 10px;
+            }
         }
-        }
-
     </style>
 </head>
 <body>
 
 <header>
     <h1>SmartNest Consulting</h1>
-    <p>Transforming Businesses. Accelerating Growth.</p>
+    <p>Transforming Businesses. Accelerating Growth.</p>
 </header>
 
 <section class="about">
@@ -108,7 +104,7 @@
 <section class="brochure">
     <h2>Our Brochure</h2>
     <p>Click below to download our company brochure.</p>
-    <a href="https://snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Brochure</a>
+    <a href="https://Snovy24.github.io/SmartNestConsulting1.github.io/SmartNestConsulting_Doublepage.pdf" target="_blank">Brochure</a>
 </section>
 
 <section class="contact">
@@ -121,14 +117,18 @@
 <section class="inquiry">
     <h2>Inquire Us:</h2>
     <form action="https://formspree.io/f/xyzpvwgk" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="_replyto" placeholder="Your Email" required>
-    <!--    <input type="email" name="email" placeholder="Your Email" required> -->
-        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="_replyto" placeholder="Your Email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+
         <button type="submit">Send Message</button>
     </form>
 </section>
-
 
 <footer>
     <p>&copy; 2025 SmartNest Consulting | All Rights Reserved</p>
@@ -136,11 +136,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
